# nork_town_city

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
scripts/: git-flow-release.sh  start-app.sh
src/: main.py
src/api/models/: base_model.py
src/api/schemas/: base_schema.py
src/api/v1/car/: enums.py  model.py  schemas.py  view.py
src/api/v1/car/busisness/: car_colors.py
src/api/v1/car/views/: car_color_view.py  car_type_view.py  car_view.py
src/api/v1/car/views/busisness/: car_busisness.py  car_color.py  car_type.py
src/api/v1/person/: model.py  schema.py
src/api/v1/person/views/: person_view.py
src/api/v1/person/views/busisness/: person_busisness.py
src/core/: base_model.py  config.py
src/migrations/versions/: 6f40e7221cc5_.py  aa52d1423b94_.py  c2317cf9a327_.py
src/models/: base_model.py
